# LarkMasterMCP

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml
docs/: BOT_SETUP_GUIDE.md  SETUP_GUIDE.md  SMART_TOOLS_GUIDE.md
src/lark_master_mcp/: __init__.py  bot_server.py  cli.py  lark_client.py  message_handler.py  minutes_handler.py  remote_server.py  server.py  smart_builder.py  tools.py
tests/: __init__.py  test_lark_client.py  test_server.py
